--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "build":"npm install",
+   
+    "start": "node index.js",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
